# entrance-guard

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: config.py
app/api/auth/: login.py  logout.py  profile.py  register.py
app/db/: mysql.py
app/middleware/: auth.py
app/utils/: jwt.py  rsa.py
storage/rsa/: private.pem  public.pem
