[project]
name = "make-enterence"
version = "0.1.0"
description = "Base Service Authentication and Authorization"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "fastapi[standard]>=0.138.1",
    "mysql-connector-python>=9.7.0",
    "python-jose>=3.5.0",
]
